--- a/app.html
+++ b/app.html
@@ -687,7 +687,7 @@ const state = {
 
     if (isActive){
       actions.push(`<button class="actionbtn neutral" data-act="rename">✏️Rename</button>`);
-      actions.push(`<button class="actionbtn" data-act="norm">💦Change norm</button>`);
+      actions.push(`<button class="actionbtn" data-act="norm">💧Change norm</button>`);
       actions.push(`<button class="actionbtn danger" data-act="archive">🗄️Archive</button>`);
     } else {
       actions.push(`<button class="actionbtn accent" data-act="restore">↩️Restore</button>`);
