Add margin to .dot class in sheetmeta

--- a/app.html
+++ b/app.html
@@ -259,7 +259,9 @@
     .sheethead{padding:14px 14px 10px; border-bottom:1px solid rgba(215,226,232,.7);}
     .sheettitle{font-weight:900;font-size:16px;line-height:1.15;color:var(--brand);}
     .sheetmeta{margin-top:6px;color:var(--muted);font-size:13px;line-height:1.3;display:flex;gap:8px;flex-wrap:wrap;align-items:center;}
-    .sheetmeta .dot{opacity:.6}
+    .sheetmeta .dot{
+  margin:0 6px;
+opacity:.6}
 
     .sheetactions{padding:12px 14px;display:flex;flex-direction:column;gap:10px;}
     .actionbtn{
